2007-07-11  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/controllers/observer.py: New proposed keywords (fixed).

	* src/chimera/instruments/filterwheel.py:
	* src/chimera/instruments/telescope.py:	Minor typo fixed.

2007-07-04  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/drivers/paramount.py: Added support for TheSky
	version 5 (only 6 was supported).

	Driver renamed to TheSkyTelescope as we use this driver for more
	than Paramount by now (Meade on LNA).

2007-07-04  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/controllers/observer.py: New keywords added (plate
	scale and equinox).
	
	* src/chimera/core/config.py: Fix behaviour of range options when
	default value is greater than min value.
	
	* src/chimera/core/manager.py: Indentation fix.

2007-07-04  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/drivers/optectcfs.py:
	* src/chimera/interfaces/focuser.py:

	New Focuser modules (driver still being implemented). Interface
	well defined.

2007-07-04  P. Henrique Silva  <henrique@astro.ufsc.br>

	* docs/chimera.epydoc: New Epydoc (epydoc.sf.net) configuration file.

2007-07-04  P. Henrique Silva  <henrique@astro.ufsc.br>

	* tests/chimera/*: New unit tests starting right now (currently
	only some modules).

2007-04-24  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/scripts/chimera: Use /usr/bin/env to call python (ensure use
	of default python on the system).
	
	* src/chimera/core/site.py:  shutdown fixed (missed sys import)

	* setup.py:	
	* src/chimera/core/location.py: Python 2.3.x stuff (not full
	ported yet).

	* src/chimera/core/manager.py: Typos.
	Fix bug on the order of sys.path (our classes first by now)
	

2007-03-16  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/drivers/paramount.py: Fixed init return value.

	* src/chimera/drivers/sbig/sbig.py:

	Fixed init return value.
	Fixed expose return value (image filename).
	Fixed some typos.

	* src/chimera/drivers/sbig/sbigdrv.py:
